Update colour of first post, and fix heading issue

--- a/_posts/2018-06-19-intro.md
+++ b/_posts/2018-06-19-intro.md
@@ -1,16 +1,16 @@
 ---
 title: "home"
-bg: white     #defined in _config.yml, can use html color like '#010101'
+bg: green     #defined in _config.yml, can use html color like '#010101'
 color: black  #text color
 style: center
 ---
 
 # University of Leicester ReSET Service
 
-## Who are we?
+## Who are we?
 The University of Leicester's ReSET (Research Software Engineering Team) are a group of software engineers with expertise in research-sector programming. We cover a range of technologies and subject areas, and are always looking to expand the number of researchers and research fields we support.
 
-## What we do 
+## What we do 
 ReSET offer software engineering expertise to researchers (typically Post-doctoral level and above). This includes anything from writing of bespoke code from scratch, to expansion of a web service to a larger scale, or optimisation and parallelisation of HPC code.
 
 We also run a number of formal training sessions (a subset of those listed [here](https://www2.le.ac.uk/offices/lli/staff-development/events/courses/it/hpc)), as well as offering more informal advice on technical issues.
