--- a/_posts/2018-06-02-whatwedo.md
+++ b/_posts/2018-06-02-whatwedo.md
@@ -3,6 +3,7 @@ title: "What we do"
 bg: white     #defined in _config.yml, can use html color like '#010101'
 color: black  #text color
 style: center
+fa-icon: laptop
 ---
 
 ## What we do 
