--- a/_posts/2018-06-04-contact.md
+++ b/_posts/2018-06-04-contact.md
@@ -3,6 +3,7 @@ title: "Contact"
 bg: white     #defined in _config.yml, can use html color like '#010101'
 color: black  #text color
 style: center
+fa-icon: comment-o
 ---
 
 ## Contact
