Change text color on red background to white. Tweak wording of first section.

--- a/_posts/2018-06-01-intro.md
+++ b/_posts/2018-06-01-intro.md
@@ -1,11 +1,11 @@
 ---
 title: "home"
 bg: red     #defined in _config.yml, can use html color like '#010101'
-color: black  #text color
+color: white  #text color
 style: center
 ---
 
 # University of Leicester ReSET Service
 
 ## Who are we?
-The University of Leicester's ReSET (Research Software Engineering Team) are a group of software engineers with expertise in research-sector programming. We cover a range of technologies and subject areas, and are always looking to expand the number of researchers and research fields we support.
+The University of Leicester's ReSET (Research Software Engineering Team) are software engineers with expertise in research-sector programming. We cover a range of technologies and subject areas, and are always looking to expand the number of researchers and research fields we support.
